# snake-search

./: .gitignore  README.md  main.py  prepare.py  pyproject.toml
configs/: base.yaml  big.yaml  lard.yaml
src/: dataset.py  draw.py  model.py  plot.py  reinforce.py  transform.py
src/dataset/: __init__.py  celeba.py  dataset.py  standard.py
src/env/: __init__.py  env.py  test_env.py
