[tool.poetry]
name = "snake-search"
version = "0.1.0"
description = "Searching an object in an image using a RL agent."
authors = ["Pierrot LeCon <pstmrtem@outlook.com>"]
license = ""
readme = "README.md"
packages = [{include = "snake_search"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
gymnasium = "^0.28.1"
torchinfo = "^1.7.2"
einops = "^0.6.0"
wandb = "^0.14.2"
torchvision = "^0.15.1"
hydra-core = "^1.3.2"
tqdm = "^4.65.0"
kornia = "^0.6.11"
pandas = "^2.0.0"
imageio = "^2.28.0"
positional-encodings = {extras = ["pytorch"], version = "^6.0.1"}


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
